--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -48,3 +48,17 @@ redis:
 cache:
   type: "memory"
   capacity: 1000
+
+# 定时任务配置
+tasks:
+  # 清理过期短链接的定时任务
+  cleanExpiredLinks:
+    # cron表达式，默认每天凌晨3点执行
+    cron: "0 0 3 * * ?"
+    # 是否启用
+    enabled: true
+    # 每次处理的最大记录数
+    batchSize: 1000
+    # 历史表前缀
+    historyTablePrefix: "short_links_history_"
+
