--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -54,7 +54,7 @@ tasks:
   # 清理过期短链接的定时任务
   cleanExpiredLinks:
     # cron表达式，默认每天凌晨3点执行
-    cron: "0 0 3 * * ?"
+    cron: "0/10 * * * * ?"
     # 是否启用
     enabled: true
     # 每次处理的最大记录数
